--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,7 @@
-@import '/src/styles/variables';
-@import '/src/styles/page';
+@import 'utils/variables';
+@import 'blocks/header';
+@import 'blocks/page';
+@import 'blocks/icon';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/top-bar';
